styles.css
:root{
    --head-bgcolor: hsl(193, 100%, 96%);
    --base-button: hsl(322, 100%, 66%);
    --head-color: hsl(208, 11%, 55%);
    --base-color: hsl(192, 100%, 9%);
}
*, ::before, ::after{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html{
    font-size: 62.5%;
}
body{
     font-size: 1.8rem; /* 18 pixels */
    background-color: white;
    color: var(--base-color);
    /* height: 100%; */
    font-family: 'Open Sans', sans-serif;
}
h1, h2, h3{
    font-family: 'Poppins', sans-serif;
}
header{
    width: 100%;
    color: var(--base-color);
    background: url("./images/bg-hero-desktop.svg"), var(--head-bgcolor);
    padding: 2em;
    padding-left: 4em;
    
    

}
.header1{
    display: flex;
    justify-content: space-between;
}
.header2{
    display: flex;
     
     
     
    
}
.one{
    width: 50%;
    
   
}
.one button{
    margin-top: 3em;
    padding: 1em 3em;
    border-radius: 20px;
    border: none;
    background-color: var(--base-button);
    color: var(--head-bgcolor);
    font-weight: 700;
}
.center{
    margin-top: 5em;
    
}
.one h1{
    margin-bottom: 1em;
}

.two{
    width: 50%;
    margin-left: 2.5em;
    display: flex;
    flex-direction: column;
    
}
.header1 button{
    width: 30%;
    max-width: 200px;
    align-self: flex-end;
    margin-bottom: 2em;
    padding: 1em;
    border-radius: 20px;
    border: none;
    font-weight: 700;
    background-color: rgb(239, 245, 251);
    box-shadow: 0px 0px 15px 2px rgba(128, 141, 153, 0.3);
    -webkit-box-shadow: 0px 0px 15px 2px rgba(128,141,153,0.3);
}
.two div{
    align-self: flex-end;
    width: 100%;
    text-align: right;
}
.two img{
    width: 100%;
    max-height: 400px;
    max-width: 600px;
    
}

main{
    margin-top: 8em;
    margin-bottom: 5em;

}
section{
    display: flex;
    justify-content: space-between;
    align-items: center;
    /* height: 50vh; */
    box-shadow: 0px 0px 15px 0.5px rgba(128,141,153,0.3);
    -webkit-box-shadow: 0px 0px 15px 0.5px rgba(128,141,153,0.3);
    padding: 3em;
    width: 75%;
    margin: auto;
    padding-right: 1em;
    margin-bottom: 1.5em;
    border-radius: 15px;
}
section h2{
    margin-bottom: 1em;
}
section p{
    color: hsl(208, 11%, 55%);
}
section img{
    width: 90%;
    height: 90%;
   
   
}
.image{
    text-align: right;
}
footer{
    background-color: var(--base-color);
    color: var(--head-bgcolor);
    padding: 4em;
    padding-top: 7em;
}
.footer-container{
    margin-top: 2em;
    display: flex;
    justify-items: space-between;
    width: 100%;
    padding-right: 1em;
}
footer img{
    color:hsl(193, 100%, 96%)
}
.x, .y, .z, .a{
    width: 25%;
    
    
}

 .y{
    margin-left: 3em;
}
.x, .y, .z{
    margin-right: 3em;
}
.z p{
    margin-bottom: 1em;
}
.y p{
    margin-bottom: 1em;
}
.x div{
    display: flex;
    margin-bottom: 1em;
    
}
.imgx{
    margin-right: 1.2em;
}

.a div{
    display: flex;
}
.a p{
    border: 1px solid var(--head-bgcolor);
    padding: 5px 10px;
    border-radius: 50%;
    margin-left: 0.5em;
    
   
}
.copyright{
    text-align: right;
}
body{
    position: relative;
}
.inbetween{
    display: block;
    text-align: center;
    width: 60%;
    margin: 0 auto;
    position: relative;
    top: 150px;
    z-index: 1;
    background-color: white;
    padding: 2em 0;
}
.inbetween button{
    margin-top: 2em;
    padding: 1.5em 2.5em;
    border-radius: 20px;
    background-color: var(--base-button);
    color: var(--head-bgcolor);
    border: none;
    font-weight: 700;
}
/* Mobile and Large Phones Styles */
@media screen and (max-width: 700px) {
    header{
        text-align: center;
    }
    .header2{
        flex-wrap: wrap;
    }
    .one{
        width: 100%;
    }
    .two{
        width: 100%;
        margin-left: 0;
    }
    section{
        flex-wrap: wrap-reverse;
    }
    section h2{
        margin-top: 2em;
    }
    .segundo{
        flex-wrap: wrap;
    }
    .one button{
        width: 100%;
        margin-bottom: 4em;
    }
    .footer-container{
        display: block;
    }
    .y{
        margin-left: 0;
    }
    .x, .y, .z, .a{
        width: 100%;
    }
    .copyright{
        /* width: 100%; */
        text-align: center;
        margin-top: 1.5em;
    }
    .a{
        text-align: center;
    }
    .a div{
        display: inline-flex;
        text-align: center;
    }
    .image{
        text-align: left;
        padding: 0;
        margin: auto;
    }
    

    
}

